[package]
name = "chksum-sha2-512"
version = "0.0.0"
authors = ["Konrad Goławski <konrad@golawski.it>"]
edition = "2021"
rust-version = "1.70.0"
description = "An implementation of the SHA-2 512 hash function with a straightforward interface for computing digests of bytes, files, directories, and more."
readme = ".cargo/README.md"
repository = "https://github.com/chksum-rs/sha2-512"
license = "MIT"
keywords = ["checksum", "digest", "hash", "sha512", "sha2-512"]
categories = ["algorithms", "cryptography", "filesystem"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
chksum-core = "0.1.0"
chksum-hash-sha2-512 = "0.0.0"
chksum-reader = { version = "0.1.0", optional = true }
chksum-writer = { version = "0.1.0", optional = true }
tokio = { version = "1.37.0", features = ["io-util"], optional = true }

[dev-dependencies]
assert_fs = { version = "1.0.13", features = ["color-auto"] }
thiserror = "1.0.51"
tokio = { version = "1.37.0", features = ["macros", "rt", "rt-multi-thread"] }

[features]
default = []
reader = ["chksum-reader"]
writer = ["chksum-writer"]

# async runtimes
async-runtime-tokio = ["chksum-core/async-runtime-tokio", "chksum-reader?/async-runtime-tokio", "chksum-writer?/async-runtime-tokio", "tokio"]
